--- a/src/lang/italian.txt
+++ b/src/lang/italian.txt
@@ -587,6 +587,12 @@ STR_MONTH_OCT                                                   :Ottobre
 STR_MONTH_NOV                                                   :Novembre
 STR_MONTH_DEC                                                   :Dicembre
 
+###length VEHICLE_TYPES
+STR_VEHICLE_TYPE_TRAINS                                         :Treni
+STR_VEHICLE_TYPE_ROAD_VEHICLES                                  :Automezzi
+STR_VEHICLE_TYPE_SHIPS                                          :Navi
+STR_VEHICLE_TYPE_AIRCRAFT                                       :Aeromobili
+
 # Graph window
 STR_GRAPH_KEY_BUTTON                                            :{BLACK}Legenda
 STR_GRAPH_KEY_TOOLTIP                                           :{BLACK}Mostra la legenda del grafico
